--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-lang",
   "version": "1.0.3",
-  "description": "",
+  "description": "The ESLint plugin for validate chinese in .vue file",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage"
@@ -18,5 +18,13 @@
   "devDependencies": {
     "eslint": "^7.2.0",
     "jest": "^26.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sunxinqiang/eslint-plugin-lang.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sunxinqiang/eslint-plugin-lang/issues"
+  },
+  "homepage": "https://github.com/Sunxinqiang/eslint-plugin-lang#readme"
 }
